# Launcher

./: Cargo.toml  README.md  build.rs  installer.iss
.github/workflows/: build.yml
src/: main.rs  minecraft.rs
src/app/: mod.rs  state.rs  styles.rs  subscription.rs  update.rs  utils.rs  view.rs
src/app/views/: dashboard.rs  mod.rs  settings.rs  statistics.rs
src/minecraft/: installer.rs  launcher.rs  mod.rs  types.rs  version.rs
