[package]
name = "minecraft-launcher-native"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "canvas", "advanced"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
directories = "5.0"
anyhow = "1.0"
futures = "0.3"
