[package]
name = "minecraft-launcher-native"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "canvas", "advanced"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
directories = "5.0"
anyhow = "1.0"
futures = "0.3"
sha2 = "0.10"
zip = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
image = { version = "0.24", features = ["gif"] }
chrono = "0.4"
discord-rich-presence = "0.2"

[build-dependencies]
winresource = "0.1"
image = "0.24"
ico = "0.3"

